# ESP-study

./: .gitignore  CMakeLists.txt  idf_comonent.yml  partitions.csv
components/: CMakeLists.txt
components/ble/: CMakeLists.txt  ble_handler.c
components/debug/: CMakeLists.txt  debug_utils.c
components/esc/: CMakeLists.txt  esc_driver.c  esc_driver.h
components/info/: CMakeLists.txt  system_info.c  system_info.h
components/led/: CMakeLists.txt  led_control.c
components/motor/: CMakeLists.txt  sg90_control.c  sg90_control.h
components/screen/: CMakeLists.txt  lvgl_handler.c  lvgl_handler.h  ssd1315_driver.c  ssd1315_driver.h  st7789v2_driver.c  st7789v2_driver.h  u8g2_handler.c  u8g2_handler.h
components/sensor/: CMakeLists.txt  mpu6050_handler.c  mpu6050_handler.h
components/test/: test_gpio.c
components/tool/: CMakeLists.txt  cmd_defs.h  cmd_parser.c
components/uart/: CMakeLists.txt  uart_handler.c  uart_handler.h
components/wifi/: CMakeLists.txt  wifi_handler.c  wifi_handler.h
main/: CMakeLists.txt  ble_handler.c  ble_handler.h  cmd_parser.c  cmd_parser.h  debug_utils.c  debug_utils.h  idf_component.yml  led_control.c  led_control.h  main.c  system_info.c  system_info.h  test.c  test_led.c  test_pwd_led.c  test_queue.c  test_rgb_led.c  test_sem.c  test_sem_mutex copy.c  test_task.c  uart_handler.c
